<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diana_gdgandroidbolivia.proyecto_final_study_jam.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1">
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="193dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center_horizontal"
                        />
                    <Button
                        android:id="@+id/boton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p1"
                        android:layout_gravity="center_horizontal"
                        android:onClick="accion"
                        />
                    <Button
                        android:id="@+id/boton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p2"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:onClick="accion1"

                        />
                    <Button
                        android:id="@+id/boton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p3"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:onClick="accion2"

                        />
                    <Button
                        android:id="@+id/boton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p4"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:onClick="accion4"

                        />
                    <Button
                        android:id="@+id/boton6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p5"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:onClick="accion5"

                        />
                    <Button
                        android:id="@+id/boton7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p6"
                        android:layout_gravity="center_horizontal"
                        android:onClick="accion6"
                       
                        />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</RelativeLayout>
