<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorf"
    tools:context="com.diana_gdgandroidbolivia.proyecto_final_study_jam.EstructuraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="32dp"
                    android:text="@string/a1"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginTop="32dp"
                    android:text="@string/a2"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="90dp"
                    android:src="@drawable/a1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginTop="32dp"
                    android:text="@string/a3"
                    android:textSize="15sp"
                    android:textStyle="italic" />
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="90dp"
                    android:src="@drawable/a2" />



            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>